<?xml version="1.0"?>
<package format="2">
  <name>kdl_manager_tutorial</name>
  <version>1.0.0</version>
  <description>Tutorial for the KDL Manager class from the generic_control_toolbox.</description>
  <author email="diogoa@kth.se">diogo</author>
  <maintainer email="diogoa@kth.se">diogo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>generic_control_toolbox</depend>
</package>
